--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mac-style.vusion",
   "description": "Vusion Mac Style",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Rainfore <rainforest92@126.com>",
   "main": "./index.js",
   "repository": "vusion/mac-style",
@@ -23,10 +23,17 @@
     "mac-style"
   ],
   "dependencies": {
+      "u-base.vue": "^0.1.0",
+      "u-button.vue": "^0.1.0",
+      "u-tabs.vue": "^0.1.0",
+      "u-tab.vue": "^0.1.0"
+  },
+  "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-vusion": "^1.1.0",
-    "u-base.vue": "^0.0.1",
-    "u-button.vue": "^0.0.1",
+    "vue": "^2.2.1"
+  },
+  "peerDependencies": {
     "vue": "^2.2.1"
   }
 }
