--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "mac-style"
   ],
   "dependencies": {
-      "u-base.vue": "^0.1.0",
-      "u-button.vue": "^0.1.0",
-      "u-tabs.vue": "^0.1.0",
-      "u-tab.vue": "^0.1.0",
-      "u-list-view.vue": "^0.1.0",
-      "u-list-view-item.vue": "^0.1.0"
+      "u-base.vue": "^0.1.3",
+      "u-button.vue": "^0.1.1",
+      "u-tabs.vue": "^0.1.3",
+      "u-tab.vue": "^0.1.3",
+      "u-list-view.vue": "^0.1.3",
+      "u-list-view-item.vue": "^0.1.3",
+      "u-tree-view.vue": "^0.1.1",
+      "u-tree-view-node.vue": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-vusion": "^1.1.0",
-    "vue": "^2.2.1"
+    "vue": "^2.3.0"
   },
   "peerDependencies": {
-    "vue": "^2.2.1"
+    "vue": "^2.3.0"
   }
 }
