--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "author": "Rainfore <rainforest92@126.com>",
   "main": "./index.js",
+  "scripts": {
+    "precommit": "node_modules/vusion-hooks/pre-commit"
+  },
   "repository": "vusion/mac-style",
   "homepage": "http://vusion.github.io",
   "bugs": {
@@ -23,19 +26,21 @@
     "mac-style"
   ],
   "dependencies": {
-      "u-base.vue": "^0.1.3",
-      "u-button.vue": "^0.1.1",
-      "u-tabs.vue": "^0.1.3",
-      "u-tab.vue": "^0.1.3",
-      "u-list-view.vue": "^0.1.3",
-      "u-list-view-item.vue": "^0.1.3",
-      "u-tree-view.vue": "^0.1.1",
-      "u-tree-view-node.vue": "^0.1.1"
+    "u-base.vue": "^0.1.3",
+    "u-button.vue": "^0.1.1",
+    "u-tabs.vue": "^0.1.3",
+    "u-tab.vue": "^0.1.3",
+    "u-list-view.vue": "^0.1.3",
+    "u-list-view-item.vue": "^0.1.3",
+    "u-tree-view.vue": "^0.1.1",
+    "u-tree-view-node.vue": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-vusion": "^1.1.0",
-    "vue": "^2.3.0"
+    "husky": "^0.13.3",
+    "vue": "^2.3.0",
+    "vusion-hooks": "^0.1.0"
   },
   "peerDependencies": {
     "vue": "^2.3.0"
