--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "u-base.vue": "~0.2.2",
     "u-button.vue": "~0.2.2",
     "u-linear-layout.vue": "^0.1.2",
+    "u-link.vue": "^0.2.3",
     "u-list-view-item.vue": "~0.2.6",
     "u-list-view.vue": "~0.2.6",
     "u-tab.vue": "~0.3.3",
