--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "u-list-view.vue": "~0.2.6",
     "u-tab.vue": "~0.3.3",
     "u-tabs.vue": "~0.3.3",
-    "u-tree-view-node.vue": "~0.2.6",
-    "u-tree-view.vue": "~0.2.6"
+    "u-tree-view-node.vue": "~0.2.7",
+    "u-tree-view-text.vue": "~0.2.7",
+    "u-tree-view.vue": "~0.2.7"
   },
   "devDependencies": {
     "eslint": "^4.3.0",
