:arrow_up: Upgrade proto-ui.vusion@0.2.1

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,5 @@
 {
-    "extends": [
-        "vusion",
-        "vusion/test"
-    ],
+    "extends": "vusion/all",
     "env": {
         "browser": true
     }
