--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "dependencies": {
     "circular-json-es6": "^2.0.1",
-    "proto-ui.vusion": "vusion/proto-ui",
+    "proto-ui.vusion": "vusion/proto-ui#develop",
     "safer-eval": "^1.2.2"
   },
   "devDependencies": {
